[package]
name = "gnostr"
version = "1905.926180.332424"
edition = "2021"
description = "gnostr:a git+nostr workflow utility"
authors = [
    "gnostr <admin@gnostr.org>",
    "0xtr <oxtrr@protonmail.com>",
    "TODO <add_more@gnostr.org>",
]
readme = "README.md"
homepage = "https://github.com/gnostr-org/gnostr"
repository = "https://github.com/gnostr-org/gnostr"
license = "MIT"
keywords = ["gnostr", "tool", "nostr"]
categories = ["command-line-utilities"]
build = "build.rs"

exclude = [
    ".git/",
    ".github/",
    ".gnostr",
    ".gnostr/.git",
    "**.gif",
    "**.md",
    "*assets/",
    "*benches/",
    "*ci/",
    "*docs/",
    "*examples/",
    "*target/",
    "*vendor/",
    #"config/",##for app
    "git2-testing",
    #"tests/",
    "org",
    "proxy",
    "xq",
    #"test_utils",
]

[lib]
name = "gnostr"
path = "src/lib/mod.rs"

[[bin]]
name = "git-remote-nostr"
path = "src/bin/git-remote-nostr/main.rs"

[features]
default = ["ghemoji", "regex-fancy", "trace-libgit", "vendor-openssl"]
expensive_tests = [] #nostr
ghemoji = ["gh-emoji"]
# regex-* features are mutually exclusive.
regex-fancy = ["syntect/regex-fancy", "two-face/syntect-fancy"]
regex-onig = ["syntect/regex-onig", "two-face/syntect-onig"]
timing = ["scopetime/enabled"]
trace-libgit = ["gnostr-asyncgit/trace-libgit"]
vendor-openssl = ["gnostr-asyncgit/vendor-openssl"]
nightly = []

[dependencies]

## relay
actix-cors = "0.7.0"
actix-http = "3.9.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
## TYPES DEPS
aes = "0.8"
ansi_term = "0.12"

anstream = "0.6.4"
#tracing-subscriber = "0.3.18"

anyhow = "1.0.75"
argparse    = "0.2.2"
ascii = "1.1.0"
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1.73"

##nostr
auth-git2 = "0.5.5"
backtrace = "0.3"
#url = "2.5"
#zeroize = "1.7"
## TYPES DEPS
base64 = "0.22"
#base64 = "0.22"
bech32 = "0.11"

bincode = "1.3.1"
## bip39 = "2.2.0"
bitcoin_hashes = "0.14.0"
bitflags = "2.9.0"
block-padding = "0.3.3"
bugreport = "0.5"
bwrap = { version = "1.3", features = ["use_std"] }
bytes = "1.7.1"
bytesize = { version = "1.3", default-features = false }
bytestring = "1.3.1"
cbc = { version = "0.1", features = [ "std" ] }
chacha20 = "0.9"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.20", features = ["derive", "env", "cargo"] }
clean-path = "0.2.1"
clipboard = "0.5.0"

colored = "2.0.0"
colorful = "0.2"
comrak = "0.28.0"
config = { version = "0.14.0", features = [
    "toml",
    "json",
], default-features = false }
console = "0.15.7"
constant_time_eq = "0.1"
#chacha20poly1305 = "0.10"
core-net = "0.1"
crossbeam-channel = "0.5"
crossterm = { version = "0.28.0", features = ["event-stream", "serde"] }
csv = "1.3.0"
ctrlc = { version = "3.2", features = ["termination"] }
derive_more = "0.99"
dialoguer = "0.10.4"
directories = "5.0.1"
dirs = "5.0.1"
duration-str = { version = "0.11.2", default-features = false }
easy-cast = "0.5"
env_logger = "0.11"
expectrl = "0.8.0"
filetreelist = { version = "1905.926180.332424", package = "gnostr-filetreelist", path = "filetreelist" }

flume = "0.10"
futures = "0.3.28"
futures-core = { version = "0.3", optional = false, default-features = false }
futures-timer = "3.0"
futures-util = "0.3"
fuzzy-matcher = "0.3"
getopts = "0.2.21"
gh-emoji = { version = "1.0", optional = true }
git2 = "0.20.1" ## asyncgit ^0.19

##gitui
#anyhow = "1.0"
gnostr-asyncgit = { version = "1905.926180.332424", default-features = false }
gnostr-crawler = { version = "1905.926180.332424", path = "crawler" }
gnostr-legit = { version = "1905.926180.332424", path = "legit" }
gnostr-query = { version = "1905.926180.332424", path = "query" }
gnostr-relay = { version = "1905.926180.332424", path = "relay", features = ["search"] }
##gnostr-types = { version = "0.7.6", path = "types" }
gnostr_qr = { version = "1905.926180.332424", path = "qr" }
hex = "0.4.3"
hkdf = "0.12"
hmac = "0.12"
home = "0.5.5"

#hex = "0.4"
hostname = "0.3.1"
http = "1.1"
indexmap = "2"
indicatif = "0.17.7"
itertools = "0.13"
k256 = { version = "0.13", features = [ "schnorr", "ecdh" ] }
#indicatif = "0.17.7"
lazy_static = "1.4"
libp2p = { version = "0.54.1", features = [
  "async-std",
  "cbor",
  "dns",
  "gossipsub",
  "identify",
  "kad",
  "macros",
  "mdns",
  "noise",
  "ping",
  "quic",
  "relay",
  "rendezvous",
  "request-response",
  "tcp",
  "tokio",
  "yamux",
  "websocket"
] }
libp2p-mplex = "0.42.0"
libp2p-quic = { version = "0.9.0", features = ["async-std"] }
#hex = "0.4"
#lazy_static = "1.4"
lightning-invoice = "0.33.2"
#lightning-invoice = { path = "../lightning/lightning-invoice", version = "0.31.0-beta" }
#lightning = { version = "0.0.123-beta", path = "../lightning/lightning" }
linkify = "0.10"

log = "0.4.17"
metrics = "0.23.0"

## nostr deps
## primary 0.34.0/1
nostr-database_0_34_0 = { package = "nostr-database", version = "0.34.0" }

## relay
nostr-db = { version = "0.4.5", features = ["search"] }

## TODO remove and upgrade
nostr-sdk_0_19_1 = { package = "nostr-sdk", version = "0.19.1" }
## TODO remove and upgrade
nostr-sdk_0_32_0 = { package = "nostr-sdk", version = "0.32.0" }

## aligned with ./crawler
nostr-sdk_0_34_0 = { package = "nostr-sdk", version = "0.34.0" }

## REF: https://docs.rs/nostr-sdk/0.37.0/nostr_sdk/
nostr-sdk_0_37_0 = { package = "nostr-sdk", version = "0.37.0" }
nostr-signer_0_34_0 = { package = "nostr-signer", version = "0.34.0" }
nostr-sqlite_0_34_0 = { package = "nostr-sqlite", version = "0.34.0" }
## TODO remove and upgrade
nostr_0_32_0 = { package = "nostr", version = "0.32.0" }
nostr_0_34_1 = { package = "nostr", version = "0.34.1" }
nostr_0_37_0 = { package = "nostr", version = "0.37.0" }

notify = "6.1.1"
notify-debouncer-mini = "0.4"
num-bigint = "0.4.6"
num_cpus = "1.16.0"

#num_cpus = "1.16.0"
once_cell = "1.21.3"
openssl = { version = "0.10", features = ["vendored"] }
pad = "0.1.6"
parking_lot = "0.12.3"
#once_cell = "1"
# pin until upgrading this does not introduce a duplicate dependency
parking_lot_core = "=0.9.9"
passwords = "3.1.13"
#num_cpus = "1"
pbkdf2 = { version = "0.12", default-features = false, features = [ "hmac", "sha2", "std" ] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = { version = "0.28", default-features = false, features = [
    'crossterm',
    'serde',
] }
rayon-core = "1.12"
regex = "1.10.2"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
ron = "0.8"
rpassword = "7.2"
russh = { version = "0.37.1", features = ["openssl"] }
russh-keys = "0.37.1"
rust-crypto = "0.2.36"
scopeguard = "1.2"
scopetime = { package = "gnostr-scopetime", path = "./scopetime", version = "1905.926180.332424" }
scrypt = "0.11.0"
#rand = "0.8"
#rand_core = "0.6"
#regex = "1.10"
#scrypt = "0.11"
secp256k1 = { version = "0.29", features = [ "hashes", "global-context", "rand-std", "serde" ] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.117"
serde_yaml = "0.9.27"
sha2 = "0.10.8"
sha256 = "1.5.0"
shellexpand = "3.1"
shellwords = "1.1.0"
simple_logger = "4.1"
simplelog = { version = "0.12", default-features = false }
#serde = { version = "1.0", features = [ "derive" ] }
#serde_json = "1.0"
#sha2 = "0.10"
speedy = { version = "0.8.7", optional = true }
ssh-key = { version = "0.6.2", features = ["ed25519"] }
strip-ansi-escapes = "0.2.0"
struct-patch = "0.4"
syntect = { version = "5.2", default-features = false, features = [
    "parsing",
    "default-syntaxes",
    "default-themes",
    "html",
] }
tempfile = "3.5.0"
tera = "1.18.1"
terminal_size = "0.3.0"
# causes cyclic error test_utils = { path = "test_utils" }
textwrap = "0.16.0"
#serde = { version = "1.0.209", features = ["derive"] }
#serde_json = "1.0.127"
thiserror = "1.0.63"
#thiserror = "1.0"
thread-priority = "1.0"
#thiserror = "1"
time = { version = "0.3.41", features = ["macros", "formatting"] }
bip39 = { package = "tiny-bip39", version = "2.0.0"}
tiny-hderive = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = [ "connect", "handshake", "rustls-tls-webpki-roots", "native-tls" ] }
tokio-util = "0.7.17"

toml = "0.7.3"
tracing = "0.1.40"
#tracing = { version = "0.1.38", default-features = false }
tracing-core = "0.1.33"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trust-dns-resolver = "0.23" # Use the latest version
tui-input = "0.10.1"
tui-textarea = "0.6"
#tungstenite = { version = "0.28", features = [ "rustls-tls-webpki-roots" ] }
two-face = { version = "0.4.0", default-features = false }
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
unicode-truncate = "1.0"
unicode-width = "0.1"
ureq = { version = "2", features = ["json", "charset"] }
url = "2.2.2"
urlencoding = "2.1.3"
which = "6.0"
zeroize = "1.6.0"

[target.'cfg(not(windows))'.dependencies]
sd-notify = "0.4.1"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4.3"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"

[dev-dependencies]
actix-rt = "2.10.0"
actix-test = "0.1.5"
anyhow = "1.0.86"
assert_cmd = "2.0.17"
cargo-dist = "0.28.2"
crossterm = "0.28.0"
ctor = "0.6.1"
env_logger = "0.11"
expectrl = "0.8.0"
#futures-util = "0.3.30"
gag = "1.0.0"
git2 = "0.20.1"
mockall = "0.11.4"
predicates = "3.1.3"
pretty_assertions = "1.4"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serial_test = "2.0.0"
signal-child = "1.0.6"
structopt = "0.3.26"
temp-env = "0.3.6"
tempfile = "3.12.0"
time = "0.3.36"
tmux_interface = "0.3.1"
#tokio = { version = "1", features = ["full"] } # Required for async operations
tracing-subscriber = "0.3.18"
#tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.2.2"

## test_utils deps
#anyhow = "1.0.75"
#assert_cmd = "2.0.12"
dialoguer = "0.10.4"
directories = "5.0.1"
#futures = "0.3.28"
#git2 = "0.20.1"
#nostr = "0.34.1"
#nostr-database = "0.34.0"
#nostr-sdk = "0.34.0"
#nostr-sqlite = "0.34.0"
once_cell = "1.18.0"
rand = "0.8"
comma = "1.0"
regex = "1"
#tempfile = "3"
thiserror = "1.0.34"
#which = "5.0"
##gnostr has a gnostr::ws library that is a copy of simple-websockets
##replace the dependency below
## gnostr = { path = "../" }
strip-ansi-escapes = "0.2.0"
#tokio = "1.33.0"
#tungstenite = "0.20.1"
#expectrl = "0.8.0"
#tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
